--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -195,7 +195,7 @@
               <div
                 id="category-options"
                 class="category-options d-none"
-                onclick="selectCategory(event);showCategoryRequiredText()"
+                onclick="selectCategory(event)"
                 
               >
                 <div>Technical Task</div>
@@ -222,6 +222,7 @@
                 >
                   Add new subtasks
                 </div>
+                
                 <div id="subtask-img" class="dropdown-arrow">
                   <div class="dropdown-img">
                     <img src="../assets/img/add.svg" alt="" />
@@ -233,7 +234,7 @@
           </div>
         </div>
       </div>
-  
+      
       <div class="form-submit">
         <div class="reminder">
           <span class="required-symbol reminder-symbol">&#10033;</span>
