--- a/assets/templates/header-template.html
+++ b/assets/templates/header-template.html
@@ -1,6 +1,6 @@
 <div class="header-content">
     Kanban Project Management Tool
-    <div class="header-buttons" id="headerContainer">
+    <div id="headerButtons" class="header-buttons" id="headerContainer">
         <!-- Hier kommt der Hilfe-Button und der User-Button rein -->
          <a href="help.html"><img class="help-icon" src="../assets/img/help.svg" alt=""></a>
          <div id="userInitial"><button class="user-circle" id="userCircle" onclick="buttonUser()"></button></div>
