--- a/assets/templates/menu-template.html
+++ b/assets/templates/menu-template.html
@@ -1,13 +1,13 @@
 <div>
   <img src="../assets/img/join-logo.svg" alt="" />
 </div>
-<div class="menu-buttons">
+<div id="menuButtons" class="menu-buttons">
   <a id="summary" href="summary.html" class="menu-hover"><img src="../assets/img/summary-icon.svg" alt="" />Summary</a>
   <a id="addTask" href="add-task.html" class="menu-hover"><img src="../assets/img/addTask-icon.svg" alt="" />Add Task</a>
   <a id="board" href="board.html" class="menu-hover"><img src="../assets/img/board-icon.svg" alt="" />Board</a>
   <a id="contacts" href="contacts.html" class="menu-hover"><img src="../assets/img/contacts-icon.svg" alt="" />Contacts</a>
 </div>
-<div class="menu-links">
+<div id="menuLinks" class="menu-links">
   <a id="privacyPolicy" href="privacy-policy.html" class="legals-hover">Privacy Policy</a>
   <a id="legalNotice" href="legal-notice.html" class="legals-hover">Legal Notice</a>
 </div>
