--- a/styles/log-in.css
+++ b/styles/log-in.css
@@ -15,6 +15,48 @@ body {
     background-color: #F6F7F8;
 }
 
+.join-page {
+    position: fixed;
+    z-index: 1000;
+    background-color: #F6F7F8;
+    width: 100%;
+    height: 100vh;
+    overflow-y: hidden;
+    pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.join-logo-move {
+    width: 200px;
+    height: 200px;
+    animation: moveToLeft 2s ease forwards, fadeOut 0.5s ease-in-out 2s;
+}
+
+@keyframes moveToLeft {
+    0% {
+        top: 50%;
+        left: 50%;
+        width: 274px;
+        height: 334px;
+        transform: translate(0, 0) scale(1);
+    }
+    100% {
+        top: 24px;
+        left: 16rem;
+        width: 100px;
+        height: 122px;
+        transform: translate(-49vw,-40vh) scale(0.36);
+    }
+}
+
+@keyframes fadeOut {
+    to {
+        opacity: 0;
+    }
+}
+
 .log-in-main {
     width: 100%;
     height: 100vh;
