--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -11,6 +11,10 @@
   <script src="../../js/add-task.js"></script>
   <script src="../../js/render.js"></script>
   <script src="../../js/contacts.js"></script>
+  <script type="module">
+    import { loadDataFromLocalStorage } from '../js/firebase.js';
+    loadDataFromLocalStorage();
+  </script>
 </head>
 <body onload="initAddTaskTemplate()">
   <div class="add-task-form-container">
