--- a/styles/log-in.css
+++ b/styles/log-in.css
@@ -363,3 +363,89 @@ button {
 .password-img {
     cursor: pointer;
 }
+
+
+@media (max-width: 450px) and (min-width: 317px) {
+    body {
+        justify-content: unset;
+        align-items: unset;
+    }
+
+    .log-in-main {
+        width: 428px;
+        height: 926px;
+        gap: 0;
+        margin-top: 6rem;
+    }
+
+    .login-title h1 {
+        font-size: 47px;
+    }
+
+    .login-title img {
+        width: 101px;
+    }
+
+    .container-log-in {
+        width: 396px;
+        height: 475px;
+    }
+
+    .input-box {
+        width: 364px;
+    }
+
+    .input-log-in {
+        width: 364px;
+    }
+
+    .header-log-in {
+        top: 44rem;
+        right: 0;
+        justify-content: center;
+    }
+
+    .join-img {
+        top: unset;
+        bottom: 4rem;
+        right: 32%;
+        width: 64px;
+        height: 78px;
+    }
+
+    .join-img img {
+        width: 64px;
+        height: 78px;
+    }
+
+    .section-log-in {
+        flex-direction: column;
+        align-items: center;
+        width: 180px;
+        gap: 21px;
+        height: 123px;
+    }
+
+    .remember-me {
+        display: none;
+    }
+
+    .button-log-in {
+    width: 180px;
+    height: 51px;
+    padding: 4px;
+    font-size: 16px;
+    }
+
+    .guest-button {
+    width: 180px;
+    height: 51px;
+    padding: 4px;
+    font-size: 16px;
+    }
+
+    .footer {
+        margin-top: 3rem;
+    }
+
+}
