--- a/assets/templates/header-template.html
+++ b/assets/templates/header-template.html
@@ -3,7 +3,7 @@
     <div id="headerButtons" class="header-buttons" id="headerContainer">
         <!-- Hier kommt der Hilfe-Button und der User-Button rein -->
          <a href="help.html"><img class="help-icon" src="../assets/img/help.svg" alt=""></a>
-         <div id="userInitial"><button class="user-circle" id="userCircle" onclick="buttonUser()"></button></div>
+         <div id="userInitial" class="user-initial"><button class="user-circle" id="userCircle" onclick="buttonUser()"></button></div>
          <div class="user-menu" id="userMenu">
             <ul>
                 <li class="user-menu-container"><a href="/html/legal-notice.html">Legal Notice</a></li>
