--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -107,6 +107,7 @@ textarea:focus {
   line-height: 24px;
   font-weight: 400;
   width: 408px;
+  max-width: 440px;
   height: 120px;
   width: 100%;
   box-shadow: 1px -2px 0px 0px rgba(0, 0, 0, 0.212);
@@ -457,7 +458,7 @@ input[id="subtasks"] {
   height: 74px;
   border-radius: 20px;
   box-shadow: 0px 0px 4px 0px #00000026;
-  position: relative;
+  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
@@ -555,4 +556,8 @@ input[id="subtasks"] {
 
 .close-button-add-task:hover {
   background-color: rgb(0, 0, 0, 0.1);
+}
+
+.body-add-task{
+  overflow: hidden;
 }
