--- a/styles/board.css
+++ b/styles/board.css
@@ -285,7 +285,7 @@
   z-index: 100;
   height: 100vh;
   width: 100%;
-  
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -294,8 +294,9 @@
 .overlay-content{
   display: flex;
   justify-content: center;
-  width: 80%;
-  height: 85%;
+  width: fit-content;
+  padding: 0 50px;
+  height: 88%;
   background-color: white;
   border-radius: 40px;
 }
