--- a/assets/templates/menu-template.html
+++ b/assets/templates/menu-template.html
@@ -1,4 +1,4 @@
-<div>
+<div id="menu-logo">
   <img src="../assets/img/join-logo.svg" alt="" />
 </div>
 <div id="menuButtons" class="menu-buttons">
