--- a/assets/templates/header-template.html
+++ b/assets/templates/header-template.html
@@ -1,5 +1,8 @@
 <div class="header-content">
-    Kanban Project Management Tool
+    <div class="header-logo">
+        <img src="../assets/img/logo-mobile.svg" alt="">
+    </div>
+    <div class="header-header">Kanban Project Management Tool</div>
     <div id="headerButtons" class="header-buttons" id="headerContainer">
         <!-- Hier kommt der Hilfe-Button und der User-Button rein -->
          <a href="help.html"><img class="help-icon" src="../assets/img/help.svg" alt=""></a>
