--- a/style.css
+++ b/style.css
@@ -71,6 +71,14 @@ button:hover {
   padding: 110px 40px 40px 96px;
 }
 
+.header-header{
+  font-size: 20px;
+}
+
+.header-logo{
+  display: none;
+}
+
 .container {
   display: flex;
   margin: 0 auto;
