mobile design header

--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -18,6 +18,7 @@
   </script>
 </head>
 <body onload="initAddTaskTemplate()">
+  <div style="position: relative;overflow: hidden;">
   <div class="add-task-form-container">
   <div class="add-task-header-wrap">
   <div class="add-task-header">Add Task</div>
@@ -267,7 +268,7 @@
     <div class="task-added">Task added to board</div>
     <img src="../assets/img/added-task.svg" alt="" />
   </div>
-  
+</div>
 </body>
 </html>
 
