--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ button:hover {
   display: flex;
   margin: 0 auto;
   max-width: 1440px;
-  max-height: 1024px;
+  height: 1024px;
 }
 
 .menu-content {
