--- a/styles/media.css
+++ b/styles/media.css
@@ -1,6 +1,7 @@
 @media(max-width: 1000px){
     .container{
         flex-direction: column-reverse;
+        height: auto !important;
     }
 
     .menu-content{
