--- a/styles/summery.css
+++ b/styles/summery.css
@@ -27,6 +27,10 @@
     font-weight: 400;
 }
 
+.mobile-vector {
+    display: none;
+}
+
 .summary-list {
     width: 648px;
     height: 562px;
@@ -350,4 +354,40 @@
     line-height: 76.8px;
     font-weight:  700;
     color: #29ABE2;
+}
+
+@media (max-width: 718px) and (min-width: 620px) {
+    .title-summary {
+        flex-direction: column;
+        width: 223px;
+        height: 104px;
+        justify-content: center;
+        gap: 0;
+        margin-left: 2rem;
+    }
+
+    .title-summary h1 {
+        font-size: 41px;
+        margin-right: 3rem;
+    }
+
+    .title-summary p {
+        font-size: 20px;
+        margin-top: unset;
+    }
+
+    .summary-list {
+        margin-left: 0;
+    }
+
+    .title-vector {
+        display: none;
+    }
+
+    .mobile-vector {
+        display: flex;
+        width: 90px;
+        position: relative;
+        right: 4rem;
+    }
 }
