--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -8,7 +8,7 @@
 }
 
 .main-add-task {
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 .first-form {
@@ -63,6 +63,7 @@
   flex-direction: column;
   margin-left: 96px;
   width: 976.25px;
+  overflow-y: scroll;
 }
 
 .add-task-form-container label {
